[gd_scene load_steps=7 format=2]

[ext_resource path="res://Misc/Fonts/SquarleyEdited.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Screens/Loading/Loading.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.941176, 0.941176, 0.941176, 1 )
Button/colors/font_color_hover = Color( 1, 0.74902, 0, 1 )
Button/colors/font_color_pressed = Color( 1, 0.74902, 0, 1 )
Button/constants/hseparation = 2
Button/styles/disabled = SubResource( 4 )
Button/styles/focus = SubResource( 4 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 4 )

[node name="Loading" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 170.0
margin_top = 287.0
margin_right = 438.0
margin_bottom = 321.0
theme = SubResource( 6 )
custom_constants/separation = 20

[node name="ConnectionStatus" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 268.0
margin_bottom = 34.0
text = "Connecting to Server..."
uppercase = true

[node name="Retry" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 54.0
margin_right = 268.0
margin_bottom = 88.0
text = "RETRY"

[node name="Back" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 108.0
margin_right = 268.0
margin_bottom = 142.0
text = "RETURN TO MENU"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
